bankapp-umbrella/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/exchange-service
            pathType: Prefix
            backend:
              service:
                name: bankapp-exchange-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bankapp-front
                port:
                  number: 8080
